add dynamic html and add instantiate dummy objects in the app.component.ts file

--- a/client/imports/app/app.component.html
+++ b/client/imports/app/app.component.html
@@ -1,1 +1,9 @@
-Hello Baby!
+<div>
+  <ul>
+    <li *ngFor="let party of parties">
+      {{party.name}}
+      <p>{{party.description}}
+      <p>{{party.location}}
+    </li>
+  </ul>
+</div>
