--- a/client/imports/app/app.component.html
+++ b/client/imports/app/app.component.html
@@ -6,6 +6,7 @@
       {{party.name}}
       <p>{{party.description}}
       <p>{{party.location}}
+      <button (click)="removeParty(party)">X</button>
     </li>
   </ul>
 </div>
